# ProjectManager

./: .dockerignore  .env.example  .gitignore  .pylintrc  AGENTS.md  AGNET.md  CONTRIBUTING.md  CREW_IMPROVEMENTS_SUMMARY.md  Dockerfile  Makefile  Project_Manger.md  README.md  README_EN.md  RepoScan_TODO.md  TODO.md  build.sh  coverage_report.py  fix_trailing_whitespace.sh  format.sh  get_latest_artifact.sh  get_latest_release.sh  install-or-upgrade.sh  install.ps1  install.sh  mypy_baseline.json  pylint.sh  pyproject.toml  release.sh  requirements.txt  run_crewai.py  run_crewai.sh  run_workflow.py  setup.py  setup_venv.sh  uninstall.sh  vprojects
.cursor/rules/: commit-message-generation.mdc  python-coding-standards.mdc  test-case.mdc  test-generation.mdc
.github/scripts/: bump_version.py  validate_release_version.py
.github/workflows/: auto-merge-pr.yml  auto-version-bump.yml  bump-major-version.yml  mypy.yml  pr-prerelease.yml  publish-beta-release.yml  publish-docker.yml  publish-python.yml  publish-release.yml  pylint.yml  python-app.yml  release-after-main-merge.yml  release.yml  validate-dev-pr-source.yml  validate-main-pr-source.yml
config/: crewai.json  crewai_advanced.json
crewai_agents/: README.md  __init__.py  crew.py  tools.py  workflow.py
crewai_agents/config/: agents.yaml  tasks.yaml
docs/: GITHUB_PACKAGES.md  PO_IGNORE_FEATURE.md  README.md  README_CN.md  README_EN.md  project_analysis.md  tasks.md  test_cases_crew.md  test_cases_en.md  test_cases_zh.md
docs/crew/: IMPROVEMENTS.md  README.md  request.json
docs/deployment/: github-packages_CN.md  github-packages_EN.md
docs/development/: README.md  README_CN.md  architecture.md  architecture_CN.md  scripts_CN.md  testing.md  testing_CN.md
docs/en/: README.md
docs/en/developer/: README.md
docs/en/development/: README.md  architecture.md  scripts.md  testing.md
docs/en/features/: project-management.md
docs/en/user/: README.md
docs/en/user-guide/: README.md  command-reference.md  configuration.md  getting-started.md
docs/features/: po-ignore-feature_CN.md  po-ignore-feature_EN.md  project-management.md  project-management_CN.md
docs/openclaw-config/: QUICKSTART.md  README.md  SUMMARY.md  openclaw.json
docs/openclaw-config/workflows/: bug-fix.lobster  project-implementation.lobster  quick-task.lobster
docs/openclaw-config/workspace-pm/: AGENTS.md  SOUL.md  USER.md
docs/requirements/: requirements_CN.md
docs/superpowers/plans/: 2026-04-14-cli-only.md  2026-04-14-commit-history-skip.md
docs/user-guide/: README_CN.md  command-reference_CN.md  configuration_CN.md  getting-started_CN.md
docs/zh/: README.md
git-hooks/: README.md  install_hooks.sh  pre-commit
hooks/: install_hooks.sh  pre-commit  pre-push
mt6735/: mt6735.json
new_project_base/: new_project_base.json
new_project_base/mt6735/: env_demo.ini  env_mt6735.ini
new_project_base/mt6739/: env_demo.ini
projects/board01/: board01.ini  projects.json
projects/scripts/: platform_builder.py
projects/template/: template.ini
scripts/: am.py  analyse.py  check_linux_standalone_binary.py  common.py  install_package.py  log.py  mypy_ci.py  operate_database.py  pm.py  project.py  project_manager.py  write_build_info.py
scripts/platform/: platform_manager.py
scripts/plugins/: po.py
src/: __init__.py  __main__.py  common.py  execution.py  execution_textual.py  install_utils.py  log_manager.py  plan_utils.py  profiler.py  project_manager.py  tui_utils.py  utils.py
src/ai/: __init__.py  llm.py
src/crew/: __init__.py  agents.py  checkpoint.py  exceptions.py  llm_config.py  models.py  oauth_login.py  storage.py  test_runner.py  tools.py  webhooks.py  workflow.py  workflow_old.py
src/hooks/: __init__.py  executor.py  registry.py
src/operations/: __init__.py  registry.py
src/plugins/: ai_docs.py  ai_explain.py  ai_review.py  ai_semantic_search.py  ai_test.py  crew_workflow.py  doctor.py  mcp_server.py  patch_override.py  project_builder.py  project_manager.py  snapshot.py  upgrader.py
src/vprjcore/: common.py  project.py  project_manager.py
tests/: conftest.py  test_cli_blackbox.py  test_hooks.py  test_log_manager.py  test_main.py  test_op_handler.py  test_patch_override.py  test_patch_override_apply.py  test_patch_override_base.py  test_patch_override_del.py  test_patch_override_new.py  test_patch_override_revert.py  test_profiler.py  test_project_manager.py  test_utils.py
tests/blackbox/: __init__.py  conftest.py  test_artifact_saving.py  test_cli.py  test_cli_blackbox_en.py  test_cli_no_fuzzy_blackbox_en.py  test_cli_safe_mode_blackbox_en.py  test_cli_security_blackbox_en.py  test_config.py  test_config_blackbox_en.py  test_hooks.py  test_install_or_upgrade_script.py  test_patch_override.py  test_project_builder.py  test_project_manager.py  test_projman_console_script.py  test_repositories.py  test_sample_projects_metadata.py  test_utils_log_profiler.py
tests/crew/: __init__.py  conftest.py  test_llm_config.py  test_models.py
tests/plugins/: test_patch_override.py  test_project_builder.py  test_project_manager.py
tests/whitebox/: test_build_script.py  test_bump_version_script.py  test_check_linux_standalone_binary.py  test_command_reference_docs.py  test_execution.py  test_execution_textual.py  test_install_utils.py  test_llm_embeddings.py  test_log_manager.py  test_main.py  test_profiler.py  test_python_compat.py  test_requirements_sync.py  test_testing_docs_commands.py  test_utils.py  test_validate_release_version_script.py  test_workflow_automation.py  test_write_build_info.py
vprjcore/: __init__.py  analyse.py  common.py  log.py  operate_database.py  platform_manager.py  plugin_manager.py  po.py  po_manager.py  project.py  project_manager.py
vprjcore/MTK/: mtk_common.py
vprjcore/custom/: __init__.py  platform_common.py
vprjcore/platform/: platform_common.py
vprjcore/plugins/: database.py  patch_override.py  po.py
vprojects-core/: __init__.py  common.py  log.py  project.py
vprojects-core/platform/: platform_manager.py
vprojects-core/plugins/: __init__.py
(+91 files in other folders)
