[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-project-manager"
version = "0.0.5"
authors = [
  { name="wangguanran", email="elvans.wang@gmail.com" },
]
description = "A comprehensive project and patch management tool for multi-board, multi-project environments with Git integration and automated PO (Patch/Override) operations."
readme = "README.md"
requires-python = ">=3.6"
license = "GPL-3.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "GitPython",
    'importlib-metadata; python_version < "3.8"',
]

[project.urls]
"Homepage" = "https://github.com/wangguanran/ProjectManager"
"Bug Tracker" = "https://github.com/wangguanran/ProjectManager/issues"
"Repository" = "https://github.com/wangguanran/ProjectManager"

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.ini"] 